[package]
name = "text2rom2600"
version = "0.1.0"
edition = "2021"
authors = ["Bruno STEUX <bruno.steux@gmail.com>"]
license = "GPL-3.0-or-later"
description = "a companion tool of cc2600 generating rom data for displaying text"
readme = "README.md"
homepage = "https://github.com/steux/tools2600"
repository = "https://github.com/steux/tools2600"
keywords = ["cli", "gamedev"]
categories = ["command-line-utilities", "game-development"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_derive = "4"
image = "0.24"
anyhow = "1.0"
